# tdtu-mcp

./: README.md  pyproject.toml
tdtu/: __init__.py  main.py
tests/: __init__.py  test_main.py
